gestion erreur message trop long

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -171,5 +171,7 @@
 	"tournament_announce1": "the game against",
 	"tournament_announce2": "will begin",
 	"and": "and",
-	"has_won_the_tournament": "has won the tournament !"
+	"has_won_the_tournament": "has won the tournament !",
+	"cancel_request": "A request has already been created, invitation canceled.",
+	"message_too_long": "This message is too long retry"
 }
