a2f -> 2af or twoaf

--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -17,7 +17,7 @@
 	"password_label": "Mot de passe",
 	"signin_button": "Se connecter",
 	"signup_link": "S'inscrire",
-	"a2f_title": "Authentification à deux facteurs",
+	"2fa_title": "Authentification à deux facteurs",
 	"code_label": "Code",
 	"code_placeholder": "Saisissez le code ici",
 	"send_code_button": "Envoyez-moi le code !",
@@ -96,8 +96,8 @@
 	"game_w": "Parties gagnées",
 	"game_l": "Parties perdues",
 	"history_mess": "Il n'y a pour l'instant pas encore d'historique car aucune partie n'a encore été jouée",
-	"a2f_good_mess": "Code A2F verifié, redrirection vers la page d'accueil",
-	"a2f_send": "Code A2F envoyé, veuillez le rentrer",
+	"2fa_good_mess": "Code a2f verifié, redrirection vers la page d'accueil",
+	"2fa_send": "Code a2f envoyé, veuillez le rentrer",
 	"Error_co": "Pouvez-vous vous connectez ou créer un compte",
 	"login_success": "Connexion réussie, redirection vers la page de l’a2f",
 	"register_success": "Création de compte réussie ! Redirection vers la page de connexion...",
