--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -18,7 +18,7 @@
 	"signin_button": "Sign In",
 	"signup_link": "Sign Up",
 
-	"a2f_title": "Two-factor authentication",
+	"2fa_title": "Two-factor authentication",
 	"code_label": "Code",
 	"code_placeholder": "enter code here",
 	"send_code_button": "Send me the code !",
@@ -97,10 +97,10 @@
 	"game_w": "Games win",
 	"game_l": "Games lose",
 	"history_mess": "There are no history for the moment because no game have been played yet",
-	"a2f_good_mess": "2FA code verified, redirecting to home page...",
-	"a2f_send": "2FA code sent, please enter it",
+	"2fa_good_mess": "2fa code verified, redirecting to home page...",
+	"2fa_send": "2fa code sent, please enter it",
 	"Error_co": "Please Sign in or Sign up !",
-	"login_success": "Login successfull! Redirecting to 2FA page...",
+	"login_success": "Login successfull! Redirecting to 2fa page...",
 	"register_success": "Registration successful! Redirecting to login page...",
 	"edit_success": "Your profile has been updated successfully",
 	"password_edit_sucess": "Password edit success",
