--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -18,7 +18,7 @@
 	"signin_button": "Iniciar sesión",
 	"signup_link": "Registrarse",
 
-	"a2f_title": "Autentificación de dos factores",
+	"2fa_title": "Autentificación de dos factores",
 	"code_label": "Código",
 	"code_placeholder": "introduce el código aquí",
 	"send_code_button": "¡Envíame el código!",
@@ -97,10 +97,10 @@
 	"game_w": "Partidas ganadas",
 	"game_l": "Partidas perdidas",
 	"history_mess": "Todavía no hay historial porque aún no se ha jugado ninguna partida",
-	"a2f_good_mess": "Código 2FA verificado, redireccionando a la página de inicio...",
-	"a2f_send": "Código 2FA enviado, por favor introdúzcalo",
+	"2fa_good_mess": "Código 2fa verificado, redireccionando a la página de inicio...",
+	"2fa_send": "Código 2fa enviado, por favor introdúzcalo",
 	"Error_co": "Inicie sesión o salga de la cuenta",
-	"login_success": "Conexión correcta, redireccionamiento a la página del a2f",
+	"login_success": "Conexión correcta, redireccionamiento a la página del 2fa",
 	"register_success": "¡Creación de cuenta! Redirigir a la página de conexión...",
 	"edit_success": "Su perfil ha sido actualizado con éxito",
 	"password_edit_success": "Contraseña modificada con éxito",
