ajout de trad manquante ou mauvaise, ajout de initsucces quand on update le password et error quand l'alias est mauvais dans le tournoi (frontend qui manquait)

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -103,7 +103,7 @@
 	"login_success": "Login successfull! Redirecting to 2fa page...",
 	"register_success": "Registration successful! Redirecting to login page...",
 	"edit_success": "Your profile has been updated successfully",
-	"password_edit_sucess": "Password edit success",
+	"password_edit_success": "Password updated",
 	"total_games_trad": "Total Games",
 	"Victories_trad": "Victories",
 	"Defeats_trad": "Defeats",
@@ -134,8 +134,8 @@
 	"user_NOT_FOUND": "User not found !",
 	"error_user": "An error occurred while verifying the user.",
 	"no_pass": "Wrong password ",
-	"same_pass": "Don't change your password with the last",
-	"not_the_current": "Your current password is not the current password",
+	"same_pass": "Don't change your password with the last password",
+	"not_the_current": "Your current password is not valid",
   	"controls": "Controls",
 	"waiting": "Waiting for new player...",
 	"to_start": "Press space",
