--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -134,8 +134,8 @@
 	"user_NOT_FOUND": "No se encontró el usuario !",
 	"error_user": "Se ha producido un error al verificar el usuario.",
 	"no_pass": "Contraseña incorrecta",
-	"same_pass": "No cambie su pase con el último",
-	"not_the_current": "Su contraseña actual no es la contraseña actual",
+	"same_pass": "No cambie su pase con el último pase",
+	"not_the_current": "Su contraseña actual es incorrecta",
 	"controls": "Pedidos",
 	"waiting": "Esperando a un nuevo jugador...",
 	"to_start": "Espacio de prensa",
