--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -17,6 +17,7 @@
 	"password_label": "Mot de passe",
 	"signin_button": "Se connecter",
 	"signup_link": "S'inscrire",
+	
 	"2fa_title": "Authentification à deux facteurs",
 	"code_label": "Code",
 	"code_placeholder": "Saisissez le code ici",
@@ -133,7 +134,7 @@
 	"user_NOT_FOUND" : "Cet utilisateur n'éxiste pas" ,
 	"error_user" : "Une erreur s’est produite lors de la vérification de l’utilisateur." ,
 	"no_pass" : "Mot de passe incorrect",
-	"same_pass" : "Ne change pas ton mot de passe avec le dernier",
+	"same_pass" : "Ne change pas ton mot de passe avec ton dernier mot de passe",
 	"not_the_current" : "Votre mot de passe actuel incorrect",
   	"controls": "Commandes",
 	"waiting": "En attente de joueur...",
