--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -135,7 +135,7 @@
 	"error_user" : "Une erreur s’est produite lors de la vérification de l’utilisateur." ,
 	"no_pass" : "Mot de passe incorrect",
 	"same_pass" : "Ne change pas ton mot de passe avec ton dernier mot de passe",
-	"not_the_current" : "Votre mot de passe actuel incorrect",
+	"not_the_current" : "Votre mot de passe actuel est incorrect",
   	"controls": "Commandes",
 	"waiting": "En attente de joueur...",
 	"to_start": "Appuyez sur espace",
