trad, input du chat qui disparait quand on est dans le chat friend

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -97,9 +97,9 @@
 	"game_w": "Games win",
 	"game_l": "Games lose",
 	"history_mess": "There are no history for the moment because no game have been played yet",
-	"2fa_good_mess": "2fa code verified, redirecting to home page...",
+	"2fa_good_mess": "2fa code verified. For your safety, your session will last 1 hour. Redirecting to home page...",
 	"2fa_send": "2fa code sent, please enter it",
-	"Error_co": "Please Sign in or Sign up !",
+	"Error_co": "your session has expired, Please Sign in or Sign up !",
 	"login_success": "Login successfull! Redirecting to 2fa page...",
 	"register_success": "Registration successful! Redirecting to login page...",
 	"edit_success": "Your profile has been updated successfully",
