--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -97,9 +97,9 @@
 	"game_w": "Parties gagnées",
 	"game_l": "Parties perdues",
 	"history_mess": "Il n'y a pour l'instant pas encore d'historique car aucune partie n'a encore été jouée",
-	"2fa_good_mess": "Code a2f verifié, redrirection vers la page d'accueil",
+	"2fa_good_mess": "Code a2f verifié. Pour votre sécurité, votre session durera 1 heure. Redrirection vers la page d'accueil",
 	"2fa_send": "Code a2f envoyé, veuillez le rentrer",
-	"Error_co": "Pouvez-vous vous connectez ou créer un compte",
+	"Error_co": "Votre session a expiré, Pouvez-vous vous connectez ou créer un compte",
 	"login_success": "Connexion réussie, redirection vers la page de l’a2f",
 	"register_success": "Création de compte réussie ! Redirection vers la page de connexion...",
 	"edit_success": "Votre profil a été mis à jour avec succès",
