--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -97,9 +97,9 @@
 	"game_w": "Partidas ganadas",
 	"game_l": "Partidas perdidas",
 	"history_mess": "Todavía no hay historial porque aún no se ha jugado ninguna partida",
-	"2fa_good_mess": "Código 2fa verificado, redireccionando a la página de inicio...",
+	"2fa_good_mess": "Código 2fa verificado. Por su seguridad, su sesión durará 1 hora. Redireccionando a la página de inicio...",
 	"2fa_send": "Código 2fa enviado, por favor introdúzcalo",
-	"Error_co": "Inicie sesión o salga de la cuenta",
+	"Error_co": "su sesión ha expirado, Inicie sesión o salga de la cuenta",
 	"login_success": "Conexión correcta, redireccionamiento a la página del 2fa",
 	"register_success": "¡Creación de cuenta! Redirigir a la página de conexión...",
 	"edit_success": "Su perfil ha sido actualizado con éxito",
