--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -111,7 +111,7 @@
 	"t_w": "Tournaments won",
 	"t_l": "Tournaments lost",
 	"total_trad": "Total Points",
-	"points_t": "Points per Games",
+	"points_t": "Points per games",
 	"your_turn": "It's your turn to play in the tournament",
 	"games_stats": "Games Statistics",
 	"tournaments_stats": "Tournaments Statistics",
